--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <div class="project-info">
           <h3>Doggy Dine</h3>
           <p>AIoT Application for Automatic feed Feeding according to Pets.</p>
-          <a href="#" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/AIoT-Application-for-Automatic-feed-Feeding-according-to-Pets-9b1763eef6074b9285393969b0b52850?pvs=4" class="more-btn">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -229,7 +229,7 @@
         <div class="project-info">
           <h3>Surrounding-Recognition</h3>
           <p>Surrounding Environment Recognition program using Yolo.</p>
-          <a href="#" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/Surrounding-Environment-Recognition-program-using-Yolo-ea23ff8ede744617b5a4ff9434f9cff7" class="more-btn">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -239,7 +239,7 @@
         <div class="project-info">
           <h3>Autonomous Parking</h3>
           <p>Planning Parking Path in Narrow space</p>
-          <a href="#" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/Planning-Parking-Path-in-Narrow-space-304cca8f73894fdd8ce0a8a8c57f99fb" class="more-btn">MORE</a>
         </div>
       </div>
       <div class="project">
