--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h2><strong>About Me</strong></h2>
     <div class="content">
       <div class="first-left-side">
-        <img src="images/profile_img.jpg" alt="Profile Image">
+        <img src="images/profile.png" alt="Profile Image">
       </div>
       <div class="first-right-side">
         <h5><strong>Name : Yunji Jeong (정윤지)</strong></h5>
@@ -43,41 +43,43 @@
   <div id="intro" class="section">
     <h2><strong>Self-Introduction</strong></h2>
     <div class="content">
-      <div class="text">
-        <p style="text-align: justify;"><span style="color: rgb(204, 129, 233);"><strong>Hello! I&#39;m
-              Yunji,</strong></span> and I&#39;m a student in the Department of Information and Communication
-          Engineering at Dongguk University.</p>
-        <p style="text-align: justify;">I like robots and I want to study communication for moving it. So, I took
-          classes in robotics and enjoyed studying. I also joined a club to make self-driving cars(MACARON5.0) and
-          studied path planning as part of the team. It was a great opportunity for me.</p>
-        <p style="text-align: justify;">I have the advantage of enjoying every day. However, because of too much
-          enjoyment, I neglected to review what I learned in the past. So, I started blogging, which became enjoyable as
-          I documented what I studied and my daily life. Please visit my Tistory.</p>
-        <p style="text-align: justify;"><span style="color: rgb(204, 129, 233);"><strong>I hope to become happier and
-              have no regrets in the future.</strong></span></p>
-        <p style="text-align: justify;">Details of my past and ongoing projects can be found at &#39;Projects&#39;
-          session. I have documented my research and study, including team collaborations.</p>
-        <p style="text-align: justify;">Please feel free to contact me if you are interested in my research and would
-          like to contact me.</p>
+      <div class="content-left">
+        <div class="text">
+          <p style="text-align: justify;"><span style="color: rgb(204, 129, 233);"><strong>Hello! I&#39;m
+                Yunji,</strong></span> and I&#39;m a student in the Department of Information and Communication
+            Engineering at Dongguk University.</p>
+          <p style="text-align: justify;">I like robots and I want to study communication for moving it. So, I took
+            classes in robotics and enjoyed studying. I also joined a club to make self-driving cars(MACARON5.0) and
+            studied path planning as part of the team. It was a great opportunity for me.</p>
+          <p style="text-align: justify;">I have the advantage of enjoying every day. However, because of too much
+            enjoyment, I neglected to review what I learned in the past. So, I started blogging, which became enjoyable as
+            I documented what I studied and my daily life. Please visit my Tistory.</p>
+          <p style="text-align: justify;"><span style="color: rgb(204, 129, 233);"><strong>I hope to become happier and
+                have no regrets in the future.</strong></span></p>
+          <p style="text-align: justify;">Details of my past and ongoing projects can be found at &#39;Projects&#39;
+            session. I have documented my research and study, including team collaborations.</p>
+          <p style="text-align: justify;">Please feel free to contact me if you are interested in my research and would
+            like to contact me.</p>
+        </div>
       </div>
-    </div>
-    <div class="line"></div>
-    <h2><strong>Areas of Interest</strong></h2>
-    <div class="content">
-      <div class="text">
-        <h3 style="text-align: center;"><strong>ITS, V2X, UAV</strong></h3>
-        <p>My primary area of interest is <strong><span style="color: rgb(204, 129, 233);">Smart
-              City</span></strong><span style="color: rgb(204, 129, 233);">&nbsp;development</span>, with a specific
-          focus on <strong><span style="color: rgb(204, 129, 233);">mobility solutions using AIoT</span></strong>
-          (Artificial Intelligence of Things). In other words, you can think of me being interested in ITS(Intelligent
-          Transportation Systems), V2X(Vehicle-to-Everything), or UAV(Unmanned Aerial Vehicle). I think this requires a
-          thorough understanding of communication, and I am passionate about developing this expertise.</p>
-        <p>In the field of unmanned mobility, I think that awareness of the surrounding environment and communication
-          with surrounding devices are of paramount importance. And I think that if the network infrastructure is
-          sufficiently equipped, it can be developed sufficiently through network communication.&nbsp;</p>
-        <p><span style="color: rgb(204, 129, 233);">So, I would like to study the communication that I will use in the
-            smart city field.&nbsp;</span></p>
-        <p>And to that end, I would like to study more about the various technologies currently being used.</p>
+      <div class="content-right">
+        <div class="content">
+          <div class="text">
+            <h3 style="text-align: center;"><strong>ITS, V2X, UAV</strong></h3>
+            <p>My primary area of interest is <strong><span style="color: rgb(204, 129, 233);">Smart
+                  City</span></strong><span style="color: rgb(204, 129, 233);">&nbsp;development</span>, with a specific
+              focus on <strong><span style="color: rgb(204, 129, 233);">mobility solutions using AIoT</span></strong>
+              (Artificial Intelligence of Things). In other words, you can think of me being interested in ITS(Intelligent
+              Transportation Systems), V2X(Vehicle-to-Everything), or UAV(Unmanned Aerial Vehicle). I think this requires a
+              thorough understanding of communication, and I am passionate about developing this expertise.</p>
+            <p>In the field of unmanned mobility, I think that awareness of the surrounding environment and communication
+              with surrounding devices are of paramount importance. And I think that if the network infrastructure is
+              sufficiently equipped, it can be developed sufficiently through network communication.&nbsp;</p>
+            <p><span style="color: rgb(204, 129, 233);">So, I would like to study the communication that I will use in the
+                smart city field.&nbsp;</span></p>
+            <p>And to that end, I would like to study more about the various technologies currently being used.</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="line"></div>
@@ -214,6 +216,16 @@
     <div class="projects-content">
       <div class="project">
         <div class="project-image">
+          <img src="images/portfolio.png" alt="Portfolio">
+        </div>
+        <div class="project-info">
+          <h3>Yunji's Portfolio</h3>
+          <p>Making My Own Portfolio with HTML, CSS, JavaScript.</p>
+          <a href="https://yunji00.notion.site/Create-a-website-using-github-13edce3411674cf9b9a480acd1674abf" class="more-btn">MORE</a>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-image">
           <img src="images/final Icon.png" alt="Doggy Dine">
         </div>
         <div class="project-info">
@@ -252,12 +264,69 @@
           <a href="https://yunji00.notion.site/Local-Path-Planning-Using-D-Algorithm-7e6ffcddae644170a98070f842932c81" class="more-btn">MORE</a>
         </div>
       </div>
+      <div class="project">
+        <div class="project-image">
+          <img src="images/Jani.png" alt="Time-table">
+        </div>
+        <div class="project-info">
+          <h3>Time Table App</h3>
+          <p>Timetable comparing Application</p>
+          <a href="https://yunji00.notion.site/Timetable-comparing-Application-2d600d0d56a64f0c940a77b5d4e98c13" class="more-btn">MORE</a>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-image">
+          <img src="images/Smart_farm.png" alt="Smart-farm">
+        </div>
+        <div class="project-info">
+          <h3>Smart farm System</h3>
+          <p>Building a Smart Farm System using Raspberry Pi</p>
+          <a href="https://yunji00.notion.site/Building-a-Smart-Farm-System-using-Raspberry-Pi-791bbdbe3f6b4612b213877e79a731f0" class="more-btn">MORE</a>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-image">
+          <img src="images/Food_Diet.png" alt="Food-Diet">
+        </div>
+        <div class="project-info">
+          <h3>Diet Management App</h3>
+          <p>Diet Management App with Android Studio</p>
+          <a href="https://yunji00.notion.site/Diet-Report-Application-e956bad90c7e406981456ae4115b22fb" class="more-btn">MORE</a>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-image">
+          <img src="images/Robot.png" alt="x-lab">
+        </div>
+        <div class="project-info">
+          <h3>Robot-Cafe Marketing</h3>
+          <p>Establish Marketing promotion strategies for ROBOT CAFE with Cooperative Robots</p>
+          <a href="https://yunji00.notion.site/Establish-Marketing-promotion-strategies-for-ROBOT-CAFE-with-Cooperative-Robots-4948ce48ec0148599281dd5f90db3157" class="more-btn">MORE</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="contact" class="section">
-    <h2>Contact Me</h2>
+    <h2><strong>Contact Me</strong></h2>
+    <div class="content">
+      <div class="contact__links">
+        <a href="https://github.com/yunjiJ00" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://yunji00.tistory.com/" target="_blank">
+          <i class="fa-solid fa-blog"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div id="footer" class="section">
+    <div class="footer">
+      <p>Yunji's Portfolio</p>
+      <p>Seoul, Korea</p>
+      <p>Tel: 010-6344-5465</p>
+      <p>E-Mail: heather2000@naver.com</p>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
-
 </html>
