--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="name"><strong>Yunji Jeong</strong></div>
     <div class="line"></div>
     <div class="menu">
-      <div class="item" onclick="scrollToSection('about')">About Me</div>
+      <div class="item" onclick="scrollToSection('about')">ABOUT ME</div>
       <div class="item" onclick="scrollToSection('intro')">Self-Introduction</div>
       <div class="item" onclick="scrollToSection('skills')">Skills</div>
       <div class="item" onclick="scrollToSection('projects')">Projects</div>
