--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<link href='//fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -16,7 +17,7 @@
     <div class="line"></div>
     <div class="menu">
       <div class="item" onclick="scrollToSection('about')">ABOUT ME</div>
-      <div class="item" onclick="scrollToSection('intro')">Self-Introduction</div>
+      <div class="item" onclick="scrollToSection('intro')">Areas of Interest</div>
       <div class="item" onclick="scrollToSection('skills')">Skills</div>
       <div class="item" onclick="scrollToSection('projects')">Projects</div>
       <div class="item" onclick="scrollToSection('contact')">Contact Me</div>
@@ -24,62 +25,48 @@
     <div class="line"></div>
   </div>
   <div id="about" class="first-section">
-    <h2><strong>About Me</strong></h2>
+    <h2><strong>ABOUT ME</strong></h2>
     <div class="content">
       <div class="first-left-side">
         <img src="images/profile.png" alt="Profile Image">
       </div>
       <div class="first-right-side">
-        <h5><strong>Name : Yunji Jeong (정윤지)</strong></h5>
-        <h5><strong>Birth Date : 2000.11.18</strong></h5>
-        <h5><strong>Nationality : Republic of Korea</strong></h5>
-        <br>
-        <h5><strong>Undergraduate student of class &lsquo;20</strong></h5>
-        <h5><strong>Majoring in information and communication engineering at Dongguk University.</strong></h5>
-      </div>
-    </div>
-  </div>
-  <div class="line"></div>
-  <div id="intro" class="section">
-    <h2><strong>Self-Introduction</strong></h2>
-    <div class="content">
-      <div class="content-left">
-        <div class="text">
+        <div class="title-text">
+          <h3><strong>Name : Yunji Jeong (정윤지)</strong></h3>
+          <h3><strong>Birth Date : 2000.11.18</strong></h3>
+          <h3><strong>Nationality : Republic of Korea</strong></h3>
+          <h4><strong>Undergraduate student of class &lsquo;20</strong></h4>
+          <h4><strong>Majoring in information and communication engineering at Dongguk University.</strong></h4>
           <p style="text-align: justify;"><span style="color: rgb(204, 129, 233);"><strong>Hello! I&#39;m
                 Yunji,</strong></span> and I&#39;m a student in the Department of Information and Communication
             Engineering at Dongguk University.</p>
-          <p style="text-align: justify;">I like robots and I want to study communication for moving it. So, I took
+          <p style="text-align: justify;">I like IoT and robots and I want to study communication for moving it. So, I took
             classes in robotics and enjoyed studying. I also joined a club to make self-driving cars(MACARON5.0) and
             studied path planning as part of the team. It was a great opportunity for me.</p>
-          <p style="text-align: justify;">I have the advantage of enjoying every day. However, because of too much
-            enjoyment, I neglected to review what I learned in the past. So, I started blogging, which became enjoyable as
-            I documented what I studied and my daily life. Please visit my Tistory.</p>
-          <p style="text-align: justify;"><span style="color: rgb(204, 129, 233);"><strong>I hope to become happier and
-                have no regrets in the future.</strong></span></p>
           <p style="text-align: justify;">Details of my past and ongoing projects can be found at &#39;Projects&#39;
             session. I have documented my research and study, including team collaborations.</p>
           <p style="text-align: justify;">Please feel free to contact me if you are interested in my research and would
             like to contact me.</p>
         </div>
       </div>
-      <div class="content-right">
-        <div class="content">
-          <div class="text">
-            <h3 style="text-align: center;"><strong>ITS, V2X, UAV</strong></h3>
-            <p>My primary area of interest is <strong><span style="color: rgb(204, 129, 233);">Smart
-                  City</span></strong><span style="color: rgb(204, 129, 233);">&nbsp;development</span>, with a specific
-              focus on <strong><span style="color: rgb(204, 129, 233);">mobility solutions using AIoT</span></strong>
-              (Artificial Intelligence of Things). In other words, you can think of me being interested in ITS(Intelligent
-              Transportation Systems), V2X(Vehicle-to-Everything), or UAV(Unmanned Aerial Vehicle). I think this requires a
-              thorough understanding of communication, and I am passionate about developing this expertise.</p>
-            <p>In the field of unmanned mobility, I think that awareness of the surrounding environment and communication
-              with surrounding devices are of paramount importance. And I think that if the network infrastructure is
-              sufficiently equipped, it can be developed sufficiently through network communication.&nbsp;</p>
-            <p><span style="color: rgb(204, 129, 233);">So, I would like to study the communication that I will use in the
-                smart city field.&nbsp;</span></p>
-            <p>And to that end, I would like to study more about the various technologies currently being used.</p>
-          </div>
-        </div>
+    </div>
+  </div>
+  <div class="line"></div>
+  <div id="intro" class="section">
+    <h2><strong>Areas of Interest</strong></h2>
+    <div class="content">
+      <div class="text">
+        <h3 style="text-align: center;"><strong>AIoT, IA, V2X</strong></h3>
+        <p>My primary area of interest is <strong><span style="color: rgb(204, 129, 233);">Smart
+              City</span></strong><span style="color: rgb(204, 129, 233);">&nbsp;development</span>, with a specific
+          focus on <strong><span style="color: rgb(204, 129, 233);">autonomous mobility solutions using AIoT</span></strong>
+          (Artificial Intelligence of Things). In other words, you can think of me being interested in IA(Intelligent Automation) and V2X(Vehicle-to-Everything).</p>
+        <p>In the field of unmanned mobility, I think that awareness of the surrounding environment and communication
+          with surrounding devices are of paramount importance. And also, if the network infrastructure is
+          sufficiently equipped, it can be developed sufficiently through network communication.&nbsp;</p>
+        <P>And I think this requires a thorough understanding of communication, and I am passionate about developing this expertise.</P>
+        <p><span style="color: rgb(204, 129, 233);">So, I would like to study the communication that I will use in the
+            smart city field.&nbsp;</span></p>
       </div>
     </div>
     <div class="line"></div>
@@ -221,7 +208,7 @@
         <div class="project-info">
           <h3>Yunji's Portfolio</h3>
           <p>Making My Own Portfolio with HTML, CSS, JavaScript.</p>
-          <a href="https://yunji00.notion.site/Create-a-website-using-github-13edce3411674cf9b9a480acd1674abf" class="more-btn">MORE</a>
+          <a href="https://yunjij00.github.io/portfolio/" class="more-btn">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -304,18 +291,45 @@
           <a href="https://yunji00.notion.site/Establish-Marketing-promotion-strategies-for-ROBOT-CAFE-with-Cooperative-Robots-4948ce48ec0148599281dd5f90db3157" class="more-btn">MORE</a>
         </div>
       </div>
+      <div class="project">
+        <div class="project-image">
+          <img src="images/profile_img.jpg" alt="blog">
+        </div>
+        <div class="project-info">
+          <h3>My Tistory Blogging</h3>
+          <p>Recording My studies on Blog.</p>
+          <a href="https://yunji00.tistory.com/" class="more-btn">MORE</a>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-image">
+          <img src="images/notion.png" alt="notion">
+        </div>
+        <div class="project-info">
+          <h3>My Notion Portfolio</h3>
+          <p>Recording My Past & Ongoing Projects on Notion</p>
+          <a href="https://yunji00.notion.site/Yunji-Jeong-ef50d2de38c94483bf1fc23519934323?pvs=4" class="more-btn">MORE</a>
+        </div>
+      </div>
     </div>
   </div>
   <div id="contact" class="section">
     <h2><strong>Contact Me</strong></h2>
     <div class="content">
-      <div class="contact__links">
-        <a href="https://github.com/yunjiJ00" target="_blank">
-          <i class="fab fa-github"></i>
-        </a>
-        <a href="https://yunji00.tistory.com/" target="_blank">
-          <i class="fa-solid fa-blog"></i>
-        </a>
+      <div class="text">
+        <h3><strong>If you want to contact me, feel free to do so through the items below.</strong></h3>
+        <h4 class="sub">Please look forward to my growth.</h4>
+        <div class="contact__links">
+          <a href="https://github.com/yunjiJ00" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://blog.naver.com/yunji00_1118" target="_blank">
+            <i class="fas fa-blog"></i>
+          </a>
+          <a href="https://www.instagram.com/yunji5434/" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -323,7 +337,7 @@
     <div class="footer">
       <p>Yunji's Portfolio</p>
       <p>Seoul, Korea</p>
-      <p>Tel: 010-6344-5465</p>
+      <p>Tel: 010-5434-5465</p>
       <p>E-Mail: heather2000@naver.com</p>
     </div>
   </div>
