Update: 프리페이징 추가

--- a/index.html
+++ b/index.html
@@ -178,23 +178,27 @@
         </div>
       </div>
       <div class="certification">
-        <h3>Certification</h3>
-        <ul>
-          <li>토익(780)</li>
-          <li>오픽(IH)</li>
-          <li>자동차 운전 면허 2종 보통</li>
-          <li>합기도 2단</li>
-          <li>검도 2단</li>
-        </ul>
-        <h3>ETC</h3>
-        <ul>
-          <li>GIT</li>
-          <li>Notion</li>
-          <li>CoLab</li>
-          <li>Docker</li>
-          <li>Unity</li>
-          <li>Slack</li>
-        </ul>
+        <div class="certification-up">
+          <h3>Certification</h3>
+          <ul>
+            <li>토익(780)</li>
+            <li>오픽(IH)</li>
+            <li>자동차 운전 면허 2종 보통</li>
+            <li>합기도 2단</li>
+            <li>검도 2단</li>
+          </ul>
+        </div>
+        <div class="certification-down">
+          <h3>ETC</h3>
+          <ul>
+            <li>GIT</li>
+            <li>Notion</li>
+            <li>CoLab</li>
+            <li>Docker</li>
+            <li>Unity</li>
+            <li>Slack</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
@@ -208,7 +212,7 @@
         <div class="project-info">
           <h3>Yunji's Portfolio</h3>
           <p>Making My Own Portfolio with HTML, CSS, JavaScript.</p>
-          <a href="https://yunjij00.github.io/portfolio/" class="more-btn">MORE</a>
+          <a href="https://yunjij00.github.io/portfolio/" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -218,7 +222,7 @@
         <div class="project-info">
           <h3>Doggy Dine</h3>
           <p>AIoT Application for Automatic feed Feeding according to Pets.</p>
-          <a href="https://yunji00.notion.site/AIoT-Application-for-Automatic-feed-Feeding-according-to-Pets-9b1763eef6074b9285393969b0b52850?pvs=4" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/AIoT-Application-for-Automatic-feed-Feeding-according-to-Pets-9b1763eef6074b9285393969b0b52850?pvs=4" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -228,7 +232,7 @@
         <div class="project-info">
           <h3>Surrounding-Recognition</h3>
           <p>Surrounding Environment Recognition program using Yolo.</p>
-          <a href="https://yunji00.notion.site/Surrounding-Environment-Recognition-program-using-Yolo-ea23ff8ede744617b5a4ff9434f9cff7" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/Surrounding-Environment-Recognition-program-using-Yolo-ea23ff8ede744617b5a4ff9434f9cff7" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -238,7 +242,7 @@
         <div class="project-info">
           <h3>Autonomous Parking</h3>
           <p>Planning Parking Path in Narrow space</p>
-          <a href="https://yunji00.notion.site/Planning-Parking-Path-in-Narrow-space-304cca8f73894fdd8ce0a8a8c57f99fb" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/Planning-Parking-Path-in-Narrow-space-304cca8f73894fdd8ce0a8a8c57f99fb" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -248,7 +252,7 @@
         <div class="project-info">
           <h3>Local Path Planning</h3>
           <p>Local Path Planning Using D* Algorithm</p>
-          <a href="https://yunji00.notion.site/Local-Path-Planning-Using-D-Algorithm-7e6ffcddae644170a98070f842932c81" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/Local-Path-Planning-Using-D-Algorithm-7e6ffcddae644170a98070f842932c81" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -258,7 +262,7 @@
         <div class="project-info">
           <h3>Time Table App</h3>
           <p>Timetable comparing Application</p>
-          <a href="https://yunji00.notion.site/Timetable-comparing-Application-2d600d0d56a64f0c940a77b5d4e98c13" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/Timetable-comparing-Application-2d600d0d56a64f0c940a77b5d4e98c13" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -268,7 +272,7 @@
         <div class="project-info">
           <h3>Smart farm System</h3>
           <p>Building a Smart Farm System using Raspberry Pi</p>
-          <a href="https://yunji00.notion.site/Building-a-Smart-Farm-System-using-Raspberry-Pi-791bbdbe3f6b4612b213877e79a731f0" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/Building-a-Smart-Farm-System-using-Raspberry-Pi-791bbdbe3f6b4612b213877e79a731f0" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -278,7 +282,7 @@
         <div class="project-info">
           <h3>Diet Management App</h3>
           <p>Diet Management App with Android Studio</p>
-          <a href="https://yunji00.notion.site/Diet-Report-Application-e956bad90c7e406981456ae4115b22fb" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/Diet-Report-Application-e956bad90c7e406981456ae4115b22fb" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -288,7 +292,7 @@
         <div class="project-info">
           <h3>Robot-Cafe Marketing</h3>
           <p>Establish Marketing promotion strategies for ROBOT CAFE with Cooperative Robots</p>
-          <a href="https://yunji00.notion.site/Establish-Marketing-promotion-strategies-for-ROBOT-CAFE-with-Cooperative-Robots-4948ce48ec0148599281dd5f90db3157" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/Establish-Marketing-promotion-strategies-for-ROBOT-CAFE-with-Cooperative-Robots-4948ce48ec0148599281dd5f90db3157" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -298,7 +302,7 @@
         <div class="project-info">
           <h3>My Tistory Blogging</h3>
           <p>Recording My studies on Blog.</p>
-          <a href="https://yunji00.tistory.com/" class="more-btn">MORE</a>
+          <a href="https://yunji00.tistory.com/" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
       <div class="project">
@@ -308,7 +312,7 @@
         <div class="project-info">
           <h3>My Notion Portfolio</h3>
           <p>Recording My Past & Ongoing Projects on Notion</p>
-          <a href="https://yunji00.notion.site/Yunji-Jeong-ef50d2de38c94483bf1fc23519934323?pvs=4" class="more-btn">MORE</a>
+          <a href="https://yunji00.notion.site/Yunji-Jeong-ef50d2de38c94483bf1fc23519934323?pvs=4" class="more-btn" target="_blank">MORE</a>
         </div>
       </div>
     </div>
