--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <h3><strong>Nationality : Republic of Korea</strong></h3>
           <h4><strong>Undergraduate student of class &lsquo;20</strong></h4>
           <h4><strong>Majoring in information and communication engineering at Dongguk University.</strong></h4>
+          <h5><strong>Undergraduate Intern at ACNL LAB in UNIST (2024.07-)</strong></h5>
           <p style="text-align: justify;"><span style="color: rgb(204, 129, 233);"><strong>Hello! I&#39;m
                 Yunji,</strong></span> and I&#39;m a student in the Department of Information and Communication
             Engineering at Dongguk University.</p>
