--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@
           <h3><strong>Name : Yunji Jeong (정윤지)</strong></h3>
           <h3><strong>Birth Date : 2000.11.18</strong></h3>
           <h3><strong>Nationality : Republic of Korea</strong></h3>
-          <h4><strong>Undergraduate student of class &lsquo;20</strong></h4>
-          <h4><strong>Majoring in information and communication engineering at Dongguk University.</strong></h4>
-          <h5><strong>Undergraduate Intern at ACNL LAB in UNIST (2024.07-)</strong></h5>
+          <h5><strong><p>(Aug.2024) B.E. degree from Information and Communication Engg., Dongguk Univ.</p>
+                      <p>(Jul.22024-Aug.2024) Undergraduate Intern at ACNL LAB, UNIST</p>
+                      <p>(Jan.2023-Nov.2023) Member of TEAM MACARON the autonomous driving team</p>
+          </strong></h5>
           <p style="text-align: justify;"><span style="color: rgb(204, 129, 233);"><strong>Hello! I&#39;m
                 Yunji,</strong></span> and I&#39;m a student in the Department of Information and Communication
             Engineering at Dongguk University.</p>
-          <p style="text-align: justify;">I like IoT and robots and I want to study communication for moving it. So, I took
-            classes in robotics and enjoyed studying. I also joined a club to make self-driving cars(MACARON5.0) and
-            studied path planning as part of the team. It was a great opportunity for me.</p>
           <p style="text-align: justify;">Details of my past and ongoing projects can be found at &#39;Projects&#39;
             session. I have documented my research and study, including team collaborations.</p>
           <p style="text-align: justify;">Please feel free to contact me if you are interested in my research and would
@@ -58,16 +56,10 @@
     <div class="content">
       <div class="text">
         <h3 style="text-align: center;"><strong>AIoT, IA, V2X</strong></h3>
-        <p>My primary area of interest is <strong><span style="color: rgb(204, 129, 233);">Smart
-              City</span></strong><span style="color: rgb(204, 129, 233);">&nbsp;development</span>, with a specific
-          focus on <strong><span style="color: rgb(204, 129, 233);">autonomous mobility solutions using AIoT</span></strong>
-          (Artificial Intelligence of Things). In other words, you can think of me being interested in IA(Intelligent Automation) and V2X(Vehicle-to-Everything).</p>
-        <p>In the field of unmanned mobility, I think that awareness of the surrounding environment and communication
-          with surrounding devices are of paramount importance. And also, if the network infrastructure is
-          sufficiently equipped, it can be developed sufficiently through network communication.&nbsp;</p>
-        <P>And I think this requires a thorough understanding of communication, and I am passionate about developing this expertise.</P>
-        <p><span style="color: rgb(204, 129, 233);">So, I would like to study the communication that I will use in the
-            smart city field.&nbsp;</span></p>
+        <p>My primary area of interest is <span style="color: rgb(204, 129, 233);"><strong>Smart City development</strong>&nbsp;</span>, with a specific focus on autonomous solutions using AIoT (Artificial Intelligence of Things).</p>
+        <p></p>I like <strong>AIoT</strong> and <strong>Automation systems</strong>, and I want to use them to build an efficient system for smart cities.</P>
+        </P>I believe that effective communication between objects and people is crucial in smart cities, and I want to explore various efficient communication methods.</P>
+        <p><span style="color: rgb(204, 129, 233);">Therefore, I intend to study the communication systems used in the Smart City field.&nbsp;</span></P>
       </div>
     </div>
     <div class="line"></div>
