--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
                       <p>(Jan.2023-Nov.2023) Member of TEAM MACARON the autonomous driving team</p>
           </strong></h5>
           <p style="text-align: justify;"><span style="color: rgb(204, 129, 233);"><strong>Hello! I&#39;m
-                Yunji,</strong></span> and I&#39;m a student in the Department of Information and Communication
+                Yunji!</strong></span>
+                <br>I&#39;m a student in the Department of Information and Communication
             Engineering at Dongguk University.</p>
           <p style="text-align: justify;">Details of my past and ongoing projects can be found at &#39;Projects&#39;
-            session. I have documented my research and study, including team collaborations.</p>
-          <p style="text-align: justify;">Please feel free to contact me if you are interested in my research and would
-            like to contact me.</p>
+            session.<br>
+            I have documented my research and study, including team collaborations.</p>
+          <p style="text-align: justify;">Please feel free to contact me if you are interested in my research.</p>
         </div>
       </div>
     </div>
@@ -56,7 +57,7 @@
     <div class="content">
       <div class="text">
         <h3 style="text-align: center;"><strong>AIoT, IA, V2X</strong></h3>
-        <p>My primary area of interest is <span style="color: rgb(204, 129, 233);"><strong>Smart City development</strong>&nbsp;</span>, with a specific focus on autonomous solutions using AIoT (Artificial Intelligence of Things).</p>
+        <p>My primary area of interest is <span style="color: rgb(204, 129, 233);"><strong>Smart City development</strong>&nbsp;</span>, with a specific focus on autonomous solutions using <strong>AIoT (Artificial Intelligence of Things).</strong></p>
         <p></p>I like <strong>AIoT</strong> and <strong>Automation systems</strong>, and I want to use them to build an efficient system for smart cities.</P>
         </P>I believe that effective communication between objects and people is crucial in smart cities, and I want to explore various efficient communication methods.</P>
         <p><span style="color: rgb(204, 129, 233);">Therefore, I intend to study the communication systems used in the Smart City field.&nbsp;</span></P>
