--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@
         <div class="certification-up">
           <h3>Certification</h3>
           <ul>
-            <li>토익(780)</li>
             <li>오픽(IH)</li>
+            <li>토익(780)</li>
             <li>자동차 운전 면허 2종 보통</li>
+            <li>PADI 스쿠버 다이빙<오픈워터> </li>
             <li>합기도 2단</li>
             <li>검도 2단</li>
           </ul>
