--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
           <h3><strong>Name : Yunji Jeong (정윤지)</strong></h3>
           <h3><strong>Birth Date : 2000.11.18</strong></h3>
           <h3><strong>Nationality : Republic of Korea</strong></h3>
-          <h5><strong><p>(Aug.2024) B.E. degree from Information and Communication Engg., Dongguk Univ.</p>
-                      <p>(Jul.22024-Aug.2024) Undergraduate Intern at ACNL LAB, UNIST</p>
-                      <p>(Jan.2023-Nov.2023) Member of TEAM MACARON the autonomous driving team</p>
+          </h5><p> <strong>M.S.</strong> (Mar.2025 - Present) Electrical Engg., Ulsan National Institute of Science and Technology.</p></h5>
+          </h5><p> <strong>B.S.</strong> (Mar.2020 - Feb.2025) Information and Communication Engg., Dongguk Univ.</p></h5>
+          </strong></h5><p>     (Jul.2024-Aug.2025) Undergraduate Intern at ACNL LAB, UNIST</p>
+                      <p>     (Jan.2023-Nov.2023) Member of TEAM MACARON the autonomous driving team</p>
           </strong></h5>
           <p style="text-align: justify;"><span style="color: rgb(204, 129, 233);"><strong>Hello! I&#39;m
                 Yunji!</strong></span>
